--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,7 +1,8 @@
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
 		<h1>Sign Up</h1>
-		<form action="" method="post">
+		Validation Errors
+		<form action="/user/signup" method="post">
 			<div class="form-group">
 				<label for="email">E-mail</label>
 				<input type="text" name="email" id="email" class="form-control">
@@ -10,6 +11,9 @@
 				<label for="password">Password</label>
 				<input type="password" name="password" id="password" class="form-control">
 			</div>
+			<input type="hidden" name="_csrf" value="{{ csrfToken }}">
+			<button type="Submit" class="btn btn-primary">Sign Up</button>
 		</form>
+
 	</div>
 </div>
